concord_macros/tests/trybuild/fail/codegen_contract/record_endpoint_execute_sse.stderr
error[E0599]: the method `execute_sse` exists for struct `PendingRequest<'_, RecordEndpointExecuteSseApiCx, EpTailH03da57fb09094b03, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen_contract/record_endpoint_execute_sse.rs:16:24
   |
 5 | / api! {
 6 | |     client RecordEndpointExecuteSseApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Tail
   | |____________- doesn't satisfy `<_ as Endpoint<RecordEndpointExecuteSseApiCx>>::Response = SseStream<_>`
...
16 |       let _ = api.tail().execute_sse().await.unwrap();
   |                          ^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `<EpTailH03da57fb09094b03 as concord_core::prelude::Endpoint<RecordEndpointExecuteSseApiCx>>::Response = SseStream<_>`
